@@ -1,3 +1,12 @@
+2010-12-10  Tony Chang  <tony@chromium.org>
+
+        Reviewed by Eric Seidel.
+
+        Use FileSystem::remove when cleaning up http lock files
+        https://bugs.webkit.org/show_bug.cgi?id=50830
+
+        * Scripts/webkitpy/layout_tests/port/http_lock.py:
+
 2010-12-10  Joone Hur  <joone@kldp.org>
 
         Reviewed by Martin Robinson.
